--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -128,7 +128,7 @@ form input {
 .modal-box {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
-	z-index: 1000; /* Sit on top */
+	z-index: 200; /* Sit on top */
 	left: 0;
 	top: 0;
 	width: 100%; /* Full width */
@@ -208,16 +208,14 @@ https://codepen./erikterwan/pen/EVzeRP
 */
 
 /*
-this is the parent of the favourite movie sidebar
+this is the parent of the favourite movie hamburger menu
 */
-#favourite-movies-toggle{
+#favourite-movies-container{
 	display: block;
 	position: fixed;
 
 	top: 30px;
 	left: 30px;
-
-	z-index: 100;
 
 	/*stops user from being able to select text here*/
 	-webkit-user-select: none;
@@ -228,20 +226,22 @@ this is the parent of the favourite movie sidebar
 designing the hamburger icon and transformation
  */
 
-#favourite-movies-toggle span{
+#favourite-movies-container span{
+	position: relative;
 	display: block;
+
+	/*styles the spans into slices*/
 	width: 33px;
 	height: 4px;
 	margin-bottom: 5px;
-	position: relative;
-
 	background: black;
 	border-radius: 3px;
 
-	z-index: 1;
+	/*makes it higher than the sidebar content, except for input toggle*/
+	z-index: 100;
 
+	/*this transforms the slices into an x shape*/
 	transform-origin: 4px 0px;
-
 	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
 	background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
 	opacity 0.55s ease;
@@ -271,11 +271,11 @@ pulse grey on save to list
 	100% {background-color: black;}
 }
 
-#favourite-movies-toggle #slice2{
+#favourite-movies-container #slice2{
 	transform-origin: 0% 0%;
 }
 
-#favourite-movies-toggle #slice3{
+#favourite-movies-container #slice3{
 	transform-origin: 0% 100%;
 }
 
@@ -283,7 +283,7 @@ pulse grey on save to list
  * Transform all the spans
  * into a crossmark.
  */
-#favourite-movies-toggle input:checked ~ span{
+#favourite-movies-container input:checked ~ span{
 	opacity: 1;
 	transform: rotate(45deg) translate(-2px, -1px);
 	background: black;
@@ -292,22 +292,22 @@ pulse grey on save to list
 /*
  * hide the middle span.
  */
-#favourite-movies-toggle input:checked ~ #slice2 {
+#favourite-movies-container input:checked ~ #slice2 {
 	opacity: 0;
 	transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 /*
- * make last span go in other direction
+ make last span go in other direction
  */
-#favourite-movies-toggle input:checked ~ #slice3{
+#favourite-movies-container input:checked ~ #slice3{
 	transform: rotate(-45deg) translate(0, -1px);
 }
 
 /*
 design the hidden input node
 */
-#favourite-movies-toggle input{
+#favourite-movies-container input{
 	display: block;
 	width: 40px;
 	height: 32px;
@@ -327,12 +327,12 @@ design the hidden input node
 /*
 designing the container and content
 */
-#favourite-movies-container{
-	width: 250px;
+#favourite-movies-content-container{
 	margin: -100px 0 0 -55px;
 	padding: 25px;
 	padding-top: 120px;
 	height: 100vh;
+	width: 250px;
 
 	background: var(--main-red);
 	-webkit-font-smoothing: antialiased;
@@ -354,12 +354,12 @@ designing the container and content
 	text-align: left;
 }
 
-#favourite-movies-toggle input:checked ~ #favourite-movies-container
+#favourite-movies-container input:checked ~ #favourite-movies-content-container
 {
 	transform: none;
 }
 
-#favourite-movies-toggle a{
+#favourite-movies-container a{
 	text-decoration: none;
 	/*color: #232323;*/
 	/*unsure of hte color here */
@@ -367,7 +367,7 @@ designing the container and content
 	transition: color 0.3s ease;
 }
 
-#favourite-movies-toggle a:hover {
+#favourite-movies-container a:hover {
 	/*color: tomato;*/
 	/*unsure of hte color here */
 }
