--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -27,18 +27,6 @@ a {
 	color: inherit;
 }
 
-#container{
-	display: flex;
-	flex-flow: row nowrap;
-}
-#main-content-container{
-	flex-grow: 1;
-}
-
-#favourite-movies-flex-container{
-
-}
-
 /*img, search bar and result container*/
 #logo img {
 	margin-top: 35px;
@@ -242,7 +230,7 @@ this is the parent of the favourite movie hamburger menu
 designing the hamburger icon and transformation
  */
 
-#favourite-movies-container span{
+#slice1, #slice2, #slice3{
 	position: relative;
 	display: block;
 
@@ -287,7 +275,7 @@ pulse grey on save to list
 }
 
 /*slide in and out sidebar*/
-#favourite-movies-container input:checked ~ #favourite-movies-content-container {
+#input-hamburger:checked ~ #favourite-movies-content-container {
 	transform: none;
 }
 
@@ -295,15 +283,15 @@ pulse grey on save to list
  * Transform all the spans
  * into a crossmark.
  */
-#favourite-movies-container #slice2{
+#slice2{
 	transform-origin: 0% 0%;
 }
 
-#favourite-movies-container #slice3{
+#slice3{
 	transform-origin: 0% 100%;
 }
 
-#favourite-movies-container input:checked ~ span{
+#input-hamburger:checked ~ span{
 	opacity: 1;
 	transform: rotate(45deg) translate(-2px, -1px);
 	background: black;
@@ -312,7 +300,7 @@ pulse grey on save to list
 /*
  * hide the middle span.
  */
-#favourite-movies-container input:checked ~ #slice2 {
+#input-hamburger:checked ~ #slice2 {
 	opacity: 0;
 	transform: rotate(0deg) scale(0.2, 0.2);
 }
@@ -320,14 +308,14 @@ pulse grey on save to list
 /*
 make last span go in other direction
  */
-#favourite-movies-container input:checked ~ #slice3{
+#input-hamburger:checked ~ #slice3{
 	transform: rotate(-45deg) translate(0, -1px);
 }
 
 /*
 design the hidden input node
 */
-#favourite-movies-container input{
+#input-hamburger{
 	display: block;
 	position: absolute;
 
@@ -338,7 +326,7 @@ design the hidden input node
 
 	cursor: pointer;
 
-	opacity: 1; /* hide it */
+	opacity: 0; /* hide it */
 	z-index: 101; /* and place it over the hamburger */
 
 	/*removes ability for user to hold touch over a node and do things (see information?) */
