unchecking input-hamburger if mobile and calling displayResult

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -212,7 +212,7 @@ https://codepen.com/erikterwan/pen/EVzeRP
 */
 
 /*
-this is the parent of the favourite movie hamburger menu
+this is the parent of the favourite movie sidebar
 */
 #favourite-movies-container{
 	display: block;
