--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -65,6 +65,10 @@ form input {
 	unsure why
 	could be something within this card itself, or the parents
 	 */
+
+	/*
+	TODO: FIX, for some reason the grow transformation is not working
+	*/
 	position: relative;
 	width: 45%;
 	height: 165px;
@@ -377,7 +381,6 @@ designing the container for content
 
 	transform-origin: 0% 0%;
 	transform: translate(-100%, 0);
-
 	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -386,25 +389,59 @@ designing the content of container
 */
 #favourite-movies-list{
 	list-style-type: none;
+	padding: 0;
 }
 
 #favourite-movies-list li{
-	padding: 10px 0;
+	/*padding: 10px 0;*/
 	font-size: 22px;
-	text-align: left;
+	/*text-align: left;*/
 }
 
 #favourite-movies-container a{
 	text-decoration: none;
-	/*color: #232323;*/
-	/*unsure of hte color here */
-
 	transition: color 0.3s ease;
 }
 
-#favourite-movies-container a:hover {
-	/*color: tomato;*/
-	/*unsure of hte color here */
+#testDiv {
+	/*position: relative;*/
+	width: 85%;
+	height: 80px;
+	background: #e7d2cc;
+	border-radius: 5px;
+	border: 1px solid grey;
+	margin: 10px auto 0;
+	text-align: left;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	transition-duration: 0.3s;
+	transition-property: transform;
+
+	/*
+	TODO: style this div
+    can look at styling for movie-container for inspiration
+    should i use same style?
+    maybe same base style but change it up, such as background color??
+    */
+}
+
+#testDiv:hover, testDiv:focus, testDiv:active {
+	transform: scale(1.03);
+	cursor: pointer;
+	/*change color?*/
+}
+
+#favourite-movies-content-container span {
+	white-space: pre;
+}
+
+#favourite-movies-content-container span i {
+	color: #FFD700;
+	text-shadow: 0 0 3px #000;
 }
 
 #show-favourite-movies{
