--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -4,6 +4,7 @@
 	--main-red: #f38363 ;
 	--accept-green: #08b335;
 	--background-grey: #e7d2cc;
+	--gold: #FFD700;
 }
 
 html {
@@ -413,6 +414,22 @@ design the hidden input node
 	transition: color 0.3s ease;
 }
 
+#favourite-movie-li:focus, #favourite-movie-li:active, #favourite-movie-li:hover {
+	cursor: pointer;
+	color: var(--main-yellow);
+}
+
+#favourite-movie-li{
+	margin-bottom: 10px;
+}
+
+#favourite-movie-li span i {
+	color: var(--gold);
+}
+
+/*testing design, used for static html that is currently commented out*/
+/*the nodes x-li belong to a testDiv*/
+
 #testDiv {
 	/*position: relative;*/
 	width: 85%;
@@ -447,6 +464,7 @@ design the hidden input node
 /*	change to lighter  grey on hover*/
 
 }
+
 
 #title-year-li{
 	flex: 1 1 80%;
