--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -3,8 +3,6 @@
 	--main-yellow: #f4cb84;
 	--main-red: #f38363 ;
 	--accept-green: #08b335;
-	--background-grey: #e7d2cc;
-	--gold: #FFD700;
 }
 
 html {
@@ -29,10 +27,7 @@ a {
 	color: inherit;
 }
 
-/*****************************
-	img, search bar and result container
-*****************************/
-
+/*img, search bar and result container*/
 #logo img {
 	margin-top: 35px;
 	width: 200px;
@@ -62,39 +57,22 @@ form input {
 	font-size: 25px;
 }
 
-/*****************************
-	style for each movie, within the result container
-*****************************/
-
+/*style for each movie, within the result container*/
 #movie-container {
-	/*
-	TODO: this div, and only this div, is positioned above sidebar menu
-	even though sidebar menu has higher z-index
-	unsure why
-	could be something within this card itself, or the parents
-	 */
-
-	/*
-	TODO: FIX, for some reason the grow transformation is not working
-	seems to not work when z-index is negative
-	*/
-
-	position: relative;
-	width: 45%;
-	height: 165px;
-	background-color: var(--background-grey);
-	border-radius: 5px;
-	border: 1px solid grey;
-	margin: 15px auto 0;
-	text-align: left;
-
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 	transition-duration: 0.3s;
 	transition-property: transform;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 45%;
+	height: 165px;
+	background: #e7d2cc;
+	border-radius: 5px;
+	border: 1px solid grey;
+	margin: 20px auto 0;
+	position: relative;
+	text-align: left;
 }
 #movie-container:hover, movie-container:focus, movie-container:active {
 	transform: scale(1.03);
@@ -147,9 +125,9 @@ form input {
 	color: #696969;
 }
 
-/*****************************
-	modal box design
- *****************************/
+/*
+ * modal box design
+ */
 
 .modal-box {
 	display: none; /* Hidden by default */
@@ -227,11 +205,11 @@ form input {
 	cursor: pointer;
 }
 
-/*****************************
-	favourites movies list
-	using this as hamburger menu design
-	https://codepen.com/erikterwan/pen/EVzeRP
-*****************************/
+/*
+favourites movies list
+using this as hamburger menu design
+https://codepen.com/erikterwan/pen/EVzeRP
+*/
 
 /*
 this is the parent of the favourite movie sidebar
@@ -241,7 +219,7 @@ this is the parent of the favourite movie sidebar
 	position: fixed;
 
 	top: 30px;
-	left: 55px;
+	left: 30px;
 
 	/*stops user from being able to select text here*/
 	-webkit-user-select: none;
@@ -255,8 +233,7 @@ designing the hamburger icon and transformation
 #slice1, #slice2, #slice3{
 	position: relative;
 	display: block;
-
-	left: -24px;
+	
 	/*top: 30px;*/
 	/*left: 30px;*/
 
@@ -303,8 +280,7 @@ pulse grey on save to list
 /*slide sidebar in and out */
 #input-hamburger:checked ~ #favourite-movies-content-container {
 	transform: none;
-	/*since there is no display: none when unchecked, it'll block any content underneath
-	circumvented by setting width on child container, instead of parent container*/
+	/*since there is no display: none when unchecked, it'll block any content underneath*/
 }
 
 @keyframes fade {
@@ -360,7 +336,7 @@ design the hidden input node
 	width: 40px;
 	height: 32px;
 	top: -7px;
-	left: -30px;
+	left: -5px;
 	/*top: 30px;*/
 	/*left: 30px;*/
 
@@ -373,133 +349,54 @@ design the hidden input node
 	-webkit-touch-callout: none;
 }
 
-/*****************************
-	designing the container for content
-*****************************/
-
+/*
+designing the container for content
+*/
 #favourite-movies-content-container{
 	margin: -100px 0 0 -55px;
+	padding: 25px;
 	padding-top: 90px;
-	background: var(--main-red);
 	/*height: 100vh;*/
+	width: 250px;
 
 	height: auto;
 	min-height: 100vh;
 
-	width: 275px;
-	/*if i set the width of the sidebar menu at the parent container
-	it blocks the content behind the sidebar, even when input-hamburger.unchecked
-	however, if i set the width here it doesn't block any content*/
 
+	background: var(--main-red);
 	-webkit-font-smoothing: antialiased;
 	/* to stop flickering of text in safari */
 
 	transform-origin: 0% 0%;
 	transform: translate(-100%, 0);
-	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 
+	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-/*****************************
-	designing the content of container
-*****************************/
-
+/*
+designing the content of container
+*/
 #favourite-movies-list{
 	list-style-type: none;
-	padding: 0;
+}
+
+#favourite-movies-list li{
+	padding: 10px 0;
+	font-size: 22px;
+	text-align: left;
 }
 
 #favourite-movies-container a{
 	text-decoration: none;
+	/*color: #232323;*/
+	/*unsure of hte color here */
+
 	transition: color 0.3s ease;
 }
 
-#favourite-movie-li:focus, #favourite-movie-li:active, #favourite-movie-li:hover {
-	cursor: pointer;
-	color: var(--main-yellow);
-}
-
-#favourite-movie-li{
-	margin-bottom: 10px;
-}
-
-#favourite-movie-li span i {
-	color: var(--gold);
-}
-
-/*testing design, used for static html that is currently commented out*/
-/*the nodes x-li belong to a testDiv*/
-
-#testDiv {
-	/*position: relative;*/
-	width: 85%;
-	height: 80px;
-	background: var(--background-grey);
-	border-radius: 5px;
-	border: 1px solid grey;
-	margin: 10px auto 0;
-	text-align: left;
-	padding: 5px;
-	overflow: hidden;
-
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-	transition-duration: 0.3s;
-	transition-property: transform;
-
-	/*
-	TODO: style this div
-    can look at styling for movie-container for inspiration
-    should i use same style?
-    maybe same base style but change it up, such as background color??
-    */
-}
-
-#testDiv:hover, testDiv:focus, testDiv:active {
-	transform: scale(1.03);
-	cursor: pointer;
-/*	change to lighter  grey on hover*/
-
-}
-
-
-#title-year-li{
-	flex: 1 1 80%;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-}
-
-#title-li{
-	flex-grow: 1;
-	font-size: 18px;
-	flex-basis: 25%;
-}
-
-#year-li{
-	font-size: 15px;
-	flex-basis: 15%;
-}
-
-#rating-li{
-	flex: 0.2 0.2 20%;
-
-	line-height: 5em;
-	/*arbitrary line height to vertically center div*/
-	min-width: 0;
-}
-
-#rating-li span {
-	white-space: pre;
-}
-
-#rating-li i {
-	color: #FFD700;
-	text-shadow: 0 0 3px #000;
+#favourite-movies-container a:hover {
+	/*color: tomato;*/
+	/*unsure of hte color here */
 }
 
 #show-favourite-movies{
@@ -507,18 +404,13 @@ design the hidden input node
 	border: solid 2px var(--main-yellow);
 	background-color: var(--main-yellow);
 	padding: 3px;
-	font-size: 20px;
-	margin-top: 10px;
+	font-size: 15px;
 }
 
 #show-favourite-movies:hover,
 #show-favourite-movies:focus {
 	cursor: pointer;
 }
-
-/*****************************
-	responsive design
- *****************************/
 
 @media screen and (max-width: 1300px) {
 	img {
