stable log in but UGLY

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/design.css
@@ -148,6 +148,15 @@ form input {
 }
 
 /*****************************
+	firebaseUI
+ *****************************/
+
+#sign-in:hover, #sign-in:active, #sign-in:focus{
+	cursor: pointer;
+}
+
+
+/*****************************
 	modal box design
  *****************************/
 
